--- a/src/components/MinecraftComponents/card_components/MinecraftCardGird3.css
+++ b/src/components/MinecraftComponents/card_components/MinecraftCardGird3.css
@@ -1,1 +1,34 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.container .box {
+  margin-bottom: 15px;
+}
+@media (min-width: 1500px) {
+  .container {
+    column-count: 4;
+  }
+}
 
+/* Medium screens */
+@media (max-width: 1499px) and (min-width: 728px) {
+  .container {
+    column-count: 3;
+  }
+}
+
+/* Small screens */
+@media (max-width: 1200px) and (min-width: 768px) {
+  .container {
+    column-count: 2;
+  }
+}
+
+/* Smallest screens */
+@media (max-width: 767px) {
+  .container {
+    column-count: 1;
+  }
+}
