--- a/src/assets/fonts/custom-font.css
+++ b/src/assets/fonts/custom-font.css
@@ -1,4 +1,4 @@
 @font-face {
-    font-family: 'Roboto Remix';
-    src: url('./Minecraftchmc-dBlX.ttf') format('truetype');
-  }
+  font-family: "Roboto Remix";
+  src: url("./Minecraftchmc-dBlX.ttf") format("truetype");
+}
